# golib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml  test_coverage.yml
golib/core/: gene_ontology.py  gene_ontoloy.py  goterm.py  semantic_similarity.py
golib/io/: abstract_line_reader.py  gaf_line_reader.py  gaf_parser.py  go_annotation.py  obo_line_reader.py  obo_parser.py  parse_error.py  value.py
src/go_lib/core/: gene_ontology.py  semantic_similarity.py
src/go_lib/io/: gaf_line_reader.py  gaf_parser.py  obo_line_reader.py  obo_parser.py  stanza.py
src/goapfp/config/: gaf_line_reader_contracts.py  obo_line_reader_contracts.py
src/goapfp/core/: gene_ontology.py  goterm.py  semantic_similarity.py
src/goapfp/eval/: classification.py
src/goapfp/io/: gaf_line_reader.py  gaf_parser.py  go_annotation.py  obo_line_reader.py  obo_parser.py  parse_error.py  stanza.py
src/golib/core/: gene_ontology.py  semantic_similarity.py
src/golib/io/: gaf_parser.py  obo_format_error.py  obo_line_reader.py  obo_parser.py  stanza.py
tests/common/: eval_fixture.py  gaf_line_reader_fixture.py  gaf_parser_fixture.py  gene_ontology_fixture.py  obo_line_reader_fixture.py  obo_parser_fixture.py  stanza_fixture.py
tests/data/: dog.plain_annotation  dog.plain_annotation_score  gaf_only_headers.gaf  gene_ontology_only_headers.obo  gosstoout_BP.txt
tests/data/fake_obo_files/: comments_and_empty_lines.obo  ten_lines_plus_comments_and_empty.obo
tests/data/semantic_similarity/: genewise-dog_BP.txt  genewise-dog_CC.txt  (+3 more)
(+12 files in other folders)
